# test_poetry

./: pyproject.toml
.github/workflows/: auto-pr.yml  ci.yml  promote-dev.yml
src/test_poetry/: random.py  random_1.py
